Prefix/suffix of outputs now defined in params, sftp settings ignored (#11)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-# Snakemake hidden files
+# Snakemake hidden files and EC2 settings
 .snakemake*
 /.snakemake
+sftp-config.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
