Improvements to the Conda package (#17)

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -1,16 +1,17 @@
 {% set name = "snakescale" %}
-{% set version = "0.3.0" %}
+{% set version = "0.4.0" %}
 
 package:
   name: "{{ name|lower }}"
   version: "{{ version }}"
 
 source:
-  #url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  #sha256: cf7775431ab352a3f2bf957ca0ab4ea93560ba0e1fa1dddeccf4269d077dfca1
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: 4cf5b989aef26491a618d8fa3339f936da16f6a9e4237f8fe6a94e4ae34d0540
 
 build:
   number: 0
+  noarch: python
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv "
 
 requirements:
