--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,6 @@ include README.md
 include LICENSE
 include docs/CONTRIBUTING.md
 recursive-include docs *.rst
+recursive-include snakescale/wrappers Snakefile
 recursive-include snakescale/wrappers *.yml *.yaml *.py
 recursive-include snakescale/wrappers *.bed *.genome
