--- a/tox.ini
+++ b/tox.ini
@@ -89,10 +89,10 @@ warn_return_any = True
 warn_redundant_casts = True
 
 [pytest]
-testpaths = 
+testpaths =
+    tests
     docs
     snakescale
-    tests
 addopts =
     --cov=snakescale
     --cov-config tox.ini
@@ -103,6 +103,16 @@ addopts =
     --doctest-rst
     --doctest-glob '*.rst'
     --show-capture=no
+norecursedirs =
+    '.*'
+    'build'
+    'dist'
+    'CVS'
+    '_darcs'
+    '{arch}'
+    '*.egg'
+    'venv'
+    'wrappers'
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
 mock_use_standalone_module = true
