New conda recipe, and attempt at self-referencing in env.

--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,8 @@ commands =
 branch = true
 source = snakescale
 parallel = true
+omit =
+    snakescale/wrappers/*
 
 [flake8]
 doctests = True
@@ -67,6 +69,7 @@ exclude =
     .ipynb_checkpoints
     .mypy_cache
     .pytest_cache
+    .snakemake
     .tox
     libs
     docs
