New conda recipe

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,5 @@ include LICENSE
 include docs/CONTRIBUTING.md
 recursive-include docs *.rst
 recursive-include snakescale/wrappers Snakefile
-recursive-include snakescale/wrappers *.yml *.yaml *.py
+recursive-include snakescale/wrappers *.yaml wrapper.py
 recursive-include snakescale/wrappers *.bed *.genome
