--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,8 @@ envlist =
 [testenv]
 description = run the test suite with (basepython)
 deps = -rtest-requirements.txt
-commands =
-    pytest {posargs}
+extras = full
+commands = pytest {posargs}
 
 [testenv:py36-lint]
 description = check the code style
