--- a/tox.ini
+++ b/tox.ini
@@ -12,14 +12,13 @@ envlist =
 description = run the test suite with (basepython)
 deps = -rtest-requirements.txt
 extras = full
-commands = pytest {posargs}
 
 [testenv:py36-lint]
 description = check the code style
 basepython = python3.6
 commands =
     black --check {toxinidir}
-#   flake8 {toxinidir}/snakescale  # Taking forever, for some reason.
+    flake8 {toxinidir}/snakescale
     pylint {toxinidir}/snakescale --errors-only --output-format=colorized --disable=E0602
 
 [testenv:py36-type]
@@ -46,8 +45,6 @@ commands =
 branch = true
 source = snakescale
 parallel = true
-omit =
-    snakescale/wrappers/*
 
 [flake8]
 doctests = True
@@ -58,8 +55,7 @@ ignore =
     D100    # Missing docstring in public module
     D105    # Missing docstring in magic method
     D107    # Missing docstring in __init__
-    E501    # line too long (121 > 99 characters) TODO: REMOVE THIS AFTER ALL WRAPPERS ARE :thumbs-up:
-    F821    # undefined name "X" TODO: REMOVE ALONG WITH E0602 in PYLINT and hand-mark each line
+    F821    # undefined name "X"
     RST304  # Unknown interpreted text role "X", https://github.com/peterjc/flake8-rst-docstrings/issues/7
 enable-extensions=G
 application-import-names = snakescale
@@ -92,20 +88,16 @@ warn_return_any = True
 warn_redundant_casts = True
 
 [pytest]
-testpaths =
-    tests
-    docs
-    snakescale
+testpaths = snakescale tests docs
 addopts =
-    --cov=snakescale
-    --cov-config tox.ini
-    --cov-report html
     --doctest-modules
     --doctest-continue-on-failure
     --doctest-plus
     --doctest-rst
     --doctest-glob '*.rst'
-    --show-capture=no
+doctest_plus = enabled
+doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
+mock_use_standalone_module = true
 norecursedirs =
     '.*'
     'build'
@@ -116,6 +108,3 @@ norecursedirs =
     '*.egg'
     'venv'
     'wrappers'
-doctest_plus = enabled
-doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
-mock_use_standalone_module = true
